--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "minibase-is-registered",
   "version": "0.1.0",
-  "description": "wip",
+  "description": "Plugin for [minibase][] and [base][], that adds `isRegistered` method to your application to detect if plugin is already registered and returns true or false if named plugin is already registered on the instance.",
   "repository": "node-minibase/minibase-is-registered",
   "author": "Charlike Mike Reagent <@tunnckoCore> (http://www.tunnckocore.tk)",
   "precommit.silent": true,
@@ -13,7 +13,7 @@
     "test": "npm run coverage",
     "posttest": "npm run lint:coverage",
     "coverage": "nyc node test.js",
-    "lint:coverage": "nyc check-coverage --lines 0 --branches 0 --statements 0 --functions 0",
+    "lint:coverage": "nyc check-coverage --lines 100 --branches 100 --statements 100 --functions 100",
     "report-coverage": "nyc report --reporter=text-lcov | coveralls",
     "prerelease": "npm test",
     "release": "standard-version --sign --no-verify",
@@ -25,6 +25,7 @@
     "commitizen": "^2.8.6",
     "coveralls": "^2.11.14",
     "cz-conventional-changelog": "^1.2.0",
+    "minibase": "^0.4.1",
     "mukla": "^0.4.5",
     "nyc": "^8.3.2",
     "pre-commit": "^1.1.3",
