docs(readme): generate readme

--- a/package.json
+++ b/package.json
@@ -50,6 +50,13 @@
     ],
     "lint": {
       "reflinks": true
-    }
+    },
+    "related": {
+      "list": []
+    },
+    "reflinks": [
+      "base",
+      "minibase"
+    ]
   }
 }
