--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "commitizen": "^2.8.6",
-    "coveralls": "^2.11.14",
-    "cz-conventional-changelog": "^1.2.0",
-    "minibase": "^0.4.1",
-    "mukla": "^0.4.5",
-    "nyc": "^8.3.2",
+    "commitizen": "~2.7.0",
+    "coveralls": "^2.11.15",
+    "cz-conventional-changelog": "1.1.5",
+    "minibase": "^1.0.0",
+    "mukla": "^0.4.8",
+    "nyc": "^9.0.1",
     "pre-commit": "^1.1.3",
     "standard": "^8.5.0",
     "standard-version": "^3.0.0"
