--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.2",
   "description": "Plugin for [minibase][] and [base][], that adds `isRegistered` method to your application to detect if plugin is already registered and returns true or false if named plugin is already registered on the instance.",
   "repository": "node-minibase/minibase-is-registered",
-  "author": "Charlike Mike Reagent <@tunnckoCore> (http://www.tunnckocore.tk)",
+  "author": "Charlike Mike Reagent <@tunnckoCore> (http://i.am.charlike.online)",
   "precommit.silent": true,
   "main": "index.js",
   "license": "MIT",
@@ -27,10 +27,10 @@
     "cz-conventional-changelog": "1.1.5",
     "minibase": "^1.0.0",
     "mukla": "^0.4.8",
-    "nyc": "^9.0.1",
+    "nyc": "^10.0.0",
     "pre-commit": "^1.1.3",
-    "standard": "^8.5.0",
-    "standard-version": "^3.0.0"
+    "standard": "^8.6.0",
+    "standard-version": "^4.0.0"
   },
   "files": [
     "index.js"
