--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "git:cz": "git-cz",
     "commit": "npm-run-all -s test git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "dush-methods": "^1.0.1"
+  },
   "devDependencies": {
     "commitizen": "~2.7.0",
     "cz-conventional-changelog": "1.1.5",
